@@ -1,3 +1,8 @@
+2001-04-12  Donal K. Fellows  <fellowsd@cs.man.ac.uk>
+
+	* generic/tkImage.c (Tk_ImageObjCmd,DeleteImage): Better detection
+	of deletion when world is falling apart. [Bug #220819]
+
 2001-04-04  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* win/tkWinMenu.c (TkWinHandleMenuEvent): corrected reseting of
